[-] Bug fixed.
[+] Feature added.
[*] Change.

2011-??-?? v1.71
================
* upgraded to AspectJ 1.6.11, OGNL 3.0.2, JRuby 1.6.2, Groovy 1.8.0
+ added caching of compiled OGNL expressions

2011-04-05 v1.70
================
* upgraded to AspectJ 1.6.10, Paranamer 2.3, MVEL 2.0.19, Spring 3.0.5.RELEASE, Commons JEXL 2.0.1, OGNL 3.0.1, Groovy 1.7.6
- fixed [ oval-Bugs-3156080 ] OVal fails to load at bean creation time
- fixed [ oval-Bugs-3173470 ] Bug in DigitsCheck
- fixed [ oval-Bugs-3175737 ] Bug while retrieving profile names from JSR group
+ added convenience constructors to XMLConfigurer for easier Spring-based configuration
+ added support for Spring dependencies being injected into SimpleCheck instances 
- fixed [ oval-Bugs-3220331 ] Missing sources JAR for OVal in Maven repository
+ small XSD improvements

2010-11-13 v1.61
================
- fixed [ oval-Bugs-3087277 ] @NotBlank ignores non-breaking space
- fixed @EMail not validating addresses correct if allowPersonalName=true

2010-10-13 v1.60
================
- fixed [ oval-Bugs-2994748 ] added missing French translations (thanks to Patrice Lachance)
+ added Validator.reportConstraintViolation allowing check implementations to generate more than one constraint violation
+ added overridable method AnnotationsConfigurer.newCheckInstance to allow implementation of custom check instantiation strategies 
+ fixed [ oval-Bugs-2922034 ] added support for constraints specified for method parameters at interface level: @Guard(inspectInterfaces=true) (thanks to Chris Pheby) 
- fixed a potential null reference (thanks to jacky163com)
* upgraded to OGNL 3.0, Paranamer 2.2.1, MVEL 2.0.18, Groovy 1.7.5, Spring 3.0.4.RELEASE, JRuby 1.5.3, AspectJ 1.6.9, SLF4J 1.6.1, log4j 1.2.16 
+ Validator now eagerly checks Java SecurityManager configuration for suppressAccessChecks ReflectionPermission during instantiation
+ added @<Constraint>.List annotations that can hold multiple constraint annotations of the same type